# visionray

./: .gitignore  CMakeLists.txt
Void/: .gitignore  Mat4_t.hpp  Matrix.hpp  Utils.hpp  Vec3_t.hpp  Vector.hpp  Void.hpp
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
include/: BasicTypes.h  CArtboard.h  CBox.hpp  CCamera.h  CColor.h  CMaterial.h  CPlane.hpp  CSphere.h  IGeometryObject.h  ILight.hpp  IObject.h  IScene.h
src/: CArtboard.cpp  CBox.cpp  CCamera.cpp  CColor.cpp  CMaterial.cpp  CPlane.cpp  CSphere.cpp  IGeometryObject.cpp  ILight.cpp  IObject.cpp  IScene.cpp
